--- a/TextileResearchDevelopment/Views/Knitting/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Knitting/Index.cshtml
@@ -44,74 +44,72 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">Searching Criteria</div>
                                 <div class="panel-body">
-                                    <form>
-                                        <div class=" form-group">
-                                            <div class="form-group col-xs-4 form-inline">
-                                                <label for="BarCodeSL" class="control-label" style="width:35%;">BarCode</label>
-                                                <div style="display: inline;">
-                                                    <input type="text" class="typeahead form-control" style="width:60%;" id="BarCodeSL" placeholder="Bar Code" required autofocus>
-                                                </div>
-                                            </div>
-                                            <div class="form-group col-xs-4 form-inline">
-                                                <label for="BuyerSL" class="control-label" style="width:35%;">Buyer</label>
-                                                <div style=" display: inline;">
-                                                    <select name="BuyerSL" id="BuyerSL" style="width:60%;" class="form-control input-sm" required autofocus></select>
-                                                </div>
-                                            </div>
-                                            <div class="form-group col-xs-4 form-inline">
-                                                <label for="FabricSL" class="control-label" style="width:35%;">Fabric</label>
-                                                <div style="display: inline;">
-                                                    <select name="FabricSL" id="FabricSL" style="width:60%;" class="form-control" required autofocus></select>
-                                                </div>
+                                    <div class=" form-group">
+                                        <div class="form-group col-xs-4 form-inline">
+                                            <label for="BarCodeSL" class="control-label" style="width:35%;">BarCode</label>
+                                            <div style="display: inline;">
+                                                <input type="text" class="typeahead form-control" style="width:60%;" id="BarCodeSL" placeholder="Bar Code" required autofocus>
                                             </div>
                                         </div>
-                                        <div class=" form-group">
-                                            <div class="form-group col-xs-4 form-inline ">
-                                                <label for="OrderNoSL" class="control-label" style="width:35%;">Order No</label>
-                                                <div style="display: inline;">
-                                                    <input type="text" class="typeahead form-control" style="width:60%;" id="OrderNoSL" placeholder="Order No" required autofocus>
-                                                </div>
-                                            </div>
-                                            <div class="form-group col-xs-4 form-inline">
-                                                <label for="ColorSL" class="control-label" style="width:35%;">Color</label>
-                                                <div style="display: inline;">
-                                                    <input type="text" class="typeahead form-control" style="width:60%;" id="ColorSL" placeholder="Color" required autofocus>
-                                                </div>
-                                            </div>
-                                            <div class="form-group col-xs-4 form-inline">
-                                                <label for="ChallanSL" class="control-label" style="width:35%;">Challan No</label>
-                                                <div style="display: inline;">
-                                                    <input type="text" class="typeahead form-control" style="width:60%;" id="ChallanSL" placeholder="Challan No" required autofocus>
-                                                </div>
+                                        <div class="form-group col-xs-4 form-inline">
+                                            <label for="BuyerSL" class="control-label" style="width:35%;">Buyer</label>
+                                            <div style=" display: inline;">
+                                                <select name="BuyerSL" id="BuyerSL" style="width:60%;" class="form-control input-sm" required autofocus></select>
                                             </div>
                                         </div>
-                                        <div class=" form-group">
-                                            <div class="form-group col-xs-4 form-inline">
-                                                <label for="DeliveryDateSL" class="control-label" style="width:35%;">Delivery Date</label>
-                                                <div class='input-group date' id='DeliveryDateSL' style="width:60%;">
-                                                    <input type='text' class="form-control" id="DeliveryDateTextSL" placeholder="Delivey Date" required autofocus />
-                                                    <span class="input-group-addon">
-                                                        <span class="glyphicon glyphicon-calendar"></span>
-                                                    </span>
-                                                </div>
-                                            </div>
-                                            <div class="form-group col-xs-4 form-inline">
-                                                <label for="FabricOrderDateSL" class="control-label" style="width:35%;">Fabric Order Date</label>
-                                                <div class='input-group date' id='FabricOrderDateSL' style="width:60%;">
-                                                    <input type='text' class="form-control" id="FabricOrderDateTextSL" placeholder="Fabric Order Date" required autofocus />
-                                                    <span class="input-group-addon">
-                                                        <span class="glyphicon glyphicon-calendar"></span>
-                                                    </span>
-                                                </div>
-                                            </div>
-                                            <div class="form-group col-xs-4 form-inline">
-                                                <button class="btn btn-warning btn-sm" style="width:35%;" id="resetFabricBtn">Reset</button>
-                                                <div style="display: inline;">
-                                                    <button type="submit" id="searchFabricBtn" class="btn btn-primary btn-sm" style="width:60%;">Search</button>
-                                                </div>
+                                        <div class="form-group col-xs-4 form-inline">
+                                            <label for="FabricSL" class="control-label" style="width:35%;">Fabric</label>
+                                            <div style="display: inline;">
+                                                <select name="FabricSL" id="FabricSL" style="width:60%;" class="form-control" required autofocus></select>
                                             </div>
                                         </div>
-                                    </form>
+                                    </div>
+                                    <div class=" form-group">
+                                        <div class="form-group col-xs-4 form-inline ">
+                                            <label for="OrderNoSL" class="control-label" style="width:35%;">Order No</label>
+                                            <div style="display: inline;">
+                                                <input type="text" class="typeahead form-control" style="width:60%;" id="OrderNoSL" placeholder="Order No" required autofocus>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-xs-4 form-inline">
+                                            <label for="ColorSL" class="control-label" style="width:35%;">Color</label>
+                                            <div style="display: inline;">
+                                                <input type="text" class="typeahead form-control" style="width:60%;" id="ColorSL" placeholder="Color" required autofocus>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-xs-4 form-inline">
+                                            <label for="ChallanSL" class="control-label" style="width:35%;">Challan No</label>
+                                            <div style="display: inline;">
+                                                <input type="text" class="typeahead form-control" style="width:60%;" id="ChallanSL" placeholder="Challan No" required autofocus>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class=" form-group">
+                                        <div class="form-group col-xs-4 form-inline">
+                                            <label for="DeliveryDateSL" class="control-label" style="width:35%;">Delivery Date</label>
+                                            <div class='input-group date' id='DeliveryDateSL' style="width:60%;">
+                                                <input type='text' class="form-control" id="DeliveryDateTextSL" placeholder="Delivey Date" required autofocus />
+                                                <span class="input-group-addon">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-xs-4 form-inline">
+                                            <label for="FabricOrderDateSL" class="control-label" style="width:35%;">Fabric Order Date</label>
+                                            <div class='input-group date' id='FabricOrderDateSL' style="width:60%;">
+                                                <input type='text' class="form-control" id="FabricOrderDateTextSL" placeholder="Fabric Order Date" required autofocus />
+                                                <span class="input-group-addon">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-xs-4 form-inline">
+                                            <button class="btn btn-warning btn-sm" style="width:35%;" id="resetFabricBtn">Reset</button>
+                                            <div style="display: inline;">
+                                                <button type="submit" id="searchFabricBtn" class="btn btn-primary btn-sm" style="width:60%;">Search</button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <table id="fabricSelectionTable" class="stripe hover order-column" style="width: 100%">
@@ -337,17 +335,20 @@
 <script>
     $(document).ready(function () {
 
+        var fabricSelectionTable = null;
+
         $("#searchFabricBtn").click(function ()
         {
+            debugger;
             event.preventDefault();
             var fabricSearchObj = {
                 BarCode: $("#BarCodeSL").val().toString(),
-                BuyerName: $("#BuyerSL  option:selected").text(),
-                FabricType: $("#FabricSL  option:selected").text(),
-                OrderNo: $("#OrderNoSL").val(),
-                Color: $("#ColorSL").val(),
-                ChallanNo: $("#ChallanSL").val(),
-                DeliveryDate: $("#DeliveryDateTextSL").val().toString()
+                BuyerID: $("#BuyerSL  option:selected").val(),
+                FabricTypeID: $("#FabricSL  option:selected").val(),
+                OrderNo: $("#OrderNoSL").val().length > 0 ? $("#OrderNoSL").val().toString() : '',
+                Color: $("#ColorSL").val().length > 0  ? $("#ColorSL").val().toString() : '',
+                ChallanNo: $("#ChallanSL").val().length > 0 ? $("#ChallanSL").val().toString() : '',
+                DeliveryDate: $("#DeliveryDateTextSL").val().length > 0 ? $("#DeliveryDateTextSL").val().toString() : '',
             };
 
             $.ajax({
@@ -357,11 +358,11 @@
                 dataType: "json",
                 data: JSON.stringify(fabricSearchObj),
                 success: function (response) {
-                    if (response.data != "" && response.data != null)
+                    if (response != "" && response != null)
                     {
-                        table.row.add(response.data);
-                        table.draw();
-                        Reset();
+                        debugger;
+                        fabricSelectionTable.rows.add(response);
+                        fabricSelectionTable.draw();
                     }
                     else {
                         alert("Failed to Save! Please Check Connection State!!!");
@@ -376,7 +377,7 @@
 
         $("#FabricSelection").click(function () {
 
-            var fabricSelectionTable = $('#fabricSelectionTable').DataTable({
+            fabricSelectionTable = $('#fabricSelectionTable').DataTable({
                 "dom": 'lrtip',
                 "scrollY": true,
                 "scrollX": true,
@@ -396,7 +397,7 @@
                         "searchable": false,
                         "data": "Id"
                     },
-                    { "data": "BarCode"},
+                    { "data": "BarCode" },
                     { "data": "BuyerName" },
                     { "data": "FabricType" },
                     { "data": "OrderNo" },
