--- a/TextileResearchDevelopment/Views/Home/LoginForm.cshtml
+++ b/TextileResearchDevelopment/Views/Home/LoginForm.cshtml
@@ -39,12 +39,21 @@
 
 <script type="text/javascript">
 
-    //addEventListener("load", function () {
-    //    setTimeout(hideURLbar, 0);
-    //}, false);
-    //function hideURLbar() { window.scrollTo(0, 1); }
+    function DisableBackButtonAllBrowsers() {
+        window.history.forward()
+    };
+    DisableBackButtonAllBrowsers();
+    window.onload = DisableBackButtonAllBrowsers;
+    window.onpageshow = function (evts) {
+        if (evts.persisted)
+            DisableBackButtonAllBrowsers();
+    };
+    window.onunload = function () {
+        void (0)
+    };
 
     $(document).ready(function () {
+
         $('#loginButton').click(function () {
             event.preventDefault();
             debugger;
